# fred2_goal_manager

./: CMakeLists.txt  README.md  package.xml
conf/: goal_manager.yaml
fred2_goal_manager/conf/: goal_manager.yaml
fred2_goal_manager/scripts/: debug.py  goal_provider.py  goal_reached.py  parameters.py  publishers.py  qos.py  subscribers.py
launch/: goal_manager.launch.py  goal_manager_for_localization.launch.py  goal_manager_launch.yaml  goal_provider.launch.py  goal_reached.launch.py
